--- a/style.css
+++ b/style.css
@@ -1,24 +1,11 @@
 *{
     font-family: roboto, Open Sans, sans-serif;
 }
-.header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #1F2937;
-    color:white;
-    padding:0px 280px;
-    padding-bottom: 60px;
-    align-items: center;
+body{
+    margin:0px;
 }
-.intro{
-    display: flex;
-    color:white;
-    background-color: #1F2937;
-    flex-direction: row;
-    justify-content: center;
-    gap : 100px;
-    padding-bottom: 40px;
+p{
+    font-size: 1.8vh;
 }
 ul{
     list-style-type: none;
@@ -26,13 +13,46 @@ ul{
     flex-direction: row;
     gap:15px;
 }
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #1F2937;
+    color:white;
+    padding:0px 12vw;
+    align-items: center;
+    border-bottom: 1px solid white;
+}
+.intro{
+    display: flex;
+    color:white;
+    background-color: #1F2937;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap : 70px;
+    padding-bottom: 5vh;
+    padding-top:5vh;
+}
+.intro-header{
+    font-size : 2.5vw;
+    font-weight:1000;
+}
+.information-header{
+    display: block;
+    font-size:4vh;
+    font-weight:900;
+    padding: 4vh 0px;
+}
 .intro-img{
-    height: 350px;
-    width: 600px;
+    height: auto;
+    width: 35vw;
+    border-radius: 10px;
+    border: 1px solid white;
 }
 .intro-text{
-    width:600px;
-    height:350px;
+    width:35vw;
+    height:auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,15 +63,16 @@ a{
     
 }
 .cards-img{
-    height:250px;
-    width:250px;
-    border-radius: 5px;
+    height:auto;
+    width:15vw;
+    border-radius: 10px;
+    border:1px solid black;
 }
 .cards{
     display: flex;
     flex-direction: column;
-    height: 300px;
-    width:250px;
+    height: 47vh;
+    width: 15vw;
 }
 .information-cards{
     display: flex;
@@ -63,17 +84,27 @@ a{
 }
 .quote{
     background-color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .quote-text{
+    font-size: 1.5vw;
+    font-style: italic;
     padding:50px;
+    width: 70vw;
+}
+.quote-author{
+    display: flex;
+    font-size: 2vh;
+    font-weight: bold;
+    margin-top: -5vh;
+    padding-bottom: 4vh;
 }
 .call-to-action{
     display: flex;
     flex-direction: row;
-}
-.footer{
-    color: white;
-    background-color: navy;
 }
 button{
     width: 150px;
@@ -82,17 +113,41 @@ button{
     color:white;
     font-weight: bold;
     font-size: 15px;
+    border: 1px solid white;
 }
-.intro-header{
-    font-size : 48px;
-    font-weight:1000;
+
+.call-to-action{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color:white;
+    margin: 10vh 15vw;
+
 }
-.information-header{
-    display: block;
-    font-size:36px;
-    font-weight:900;
-    padding: 40px 0px;
+.call-to-action-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:2vh;
+    
 }
-body{
-    margin:0px;
+.call-to-action-header{
+    display: flex;
+    padding:1vh;
+    font-size : 2vh
+}
+.call-to-action-text{
+    font-size : 1.6vh;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    color: white;
+    background-color: #1F2937;
+}
+.footer-text{
+    font-size: 1.5vw;
 }
